--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
           </h3>
         </div>
 
+        <div class="card">
+          <h2>Note: These posters are for real my own creation !</h2>
+        </div>
       </div>
     </div>
 
